fix: 聊天信息接口查询 bug