@@ -6,6 +6,7 @@ import cn.hutool.core.date.DateUnit;
 import cn.hutool.core.date.DateUtil;
 import cn.hutool.core.lang.Assert;
 import cn.hutool.core.lang.Pair;
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.hula.common.annotation.RedissonLock;
 import com.hula.common.domain.vo.req.CursorPageBaseReq;
 import com.hula.common.domain.vo.res.CursorPageBaseResp;
@@ -59,6 +60,7 @@ import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -258,17 +260,26 @@ public class ChatServiceImpl implements ChatService {
 		// 2. 批量查询所有房间的最后一条消息ID（用于权限过滤）
 		Map<Long, Long> lastMsgIds = contactService.getLastMsgIds(receiveUid, roomIds);
 
-		// 3. 批量查询所有符合条件的消息
-		List<Message> messages = messageDao.getMessagesByRoomIds(roomIds, lastMsgIds);
+        List<Message> messages = messageDao.list(new LambdaQueryWrapper<Message>()
+                .ge(Message::getCreateTime, LocalDate.now().minusMonths(3)));
 
-		Map<Long, List<Message>> messageMap = messages.stream()
-				.filter(message -> message.getRoomId() != null)
-				.collect(Collectors.groupingBy(Message::getRoomId, LinkedHashMap::new, Collectors.toList()));
+        Map<Long, List<Message>> groupedMessages = messages.stream()
+                .collect(Collectors.groupingBy(Message::getRoomId));
+
+        Map<Long, List<Message>> filteredMessageMap = new HashMap<>();
+
+        groupedMessages.forEach((roomId, messageList) -> {
+            Long lastMsgId = lastMsgIds.get(roomId) == null ? 0L : lastMsgIds.get(roomId);
+            List<Message> filteredList = messageList.stream()
+                    .filter(item -> item.getId() > lastMsgId)
+                    .toList();
+            filteredMessageMap.put(roomId, filteredList);
+        });
 
 		// 4. 转换为响应对象并返回
 		List<ChatMessageResp> baseMessages = new ArrayList<>();
-		for (Long roomId : messageMap.keySet()) {
-			baseMessages.addAll(getMsgRespBatch(roomId, messageMap.get(roomId), receiveUid));
+		for (Long roomId : filteredMessageMap.keySet()) {
+			baseMessages.addAll(getMsgRespBatch(roomId, filteredMessageMap.get(roomId), receiveUid));
 		}
 		return baseMessages;
 	}
